final basic libraries (1.0)